Fix underline visibility

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -246,7 +246,7 @@ button:hover {
   line-height: 24px;
 }
 
-.border-bottom::after {
+.underline::after {
   content: url("../assets/arrow-F.svg");
   display: inline-block;
   margin-right: 8px;
